fixing a bug that made the text and buttons not match up on smaller screens

--- a/css/creative.css
+++ b/css/creative.css
@@ -213,9 +213,9 @@ header .header-content .header-content-inner p {
 
 header .header-content .header-content-inner .btn {
     margin-bottom: 40px;
-    margin-right: 10px;
     font-weight: 300;
-    width: 20%;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 @media (min-width: 768px) {
